test/conformance/kuttl/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-modify-downstream/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-clone-nosync-modify-downstream
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
