test/conformance/kuttl/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-modify-downstream/05-assert.yaml
apiVersion: v1
data:
  foo: aGVyZWlzY2hhbmdlZGRhdGE=
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-nosync-modify-downstream
type: Opaque
